[package]
name = "si-data"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.10.1"
bytes = "1.0.1"
deadpool = "0.8.1"
deadpool-postgres = "0.9.0"
lazy_static = "1.4.0"
refinery = { version = "0.6.0", features = ["tokio-postgres", "tokio"] }
serde = "1.0.123"
serde_json = "1.0.64"
si-settings = { path = "../si-settings" }
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = { version ="0.7.0", features = ["runtime", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.26"
