[package]
name = "si-kubernetes"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

[[bin]]
name = "si-kubernetes"
path = "src/bin/server.rs"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
opentelemetry = { version = "0.6", features = ["tonic"] }
opentelemetry-jaeger = "0.5"
prost = "0.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8"
si-account = { path = "../si-account" }
si-cea = { path = "../si-cea" }
si-data = { path = "../si-data" }
si-settings = { path = "../si-settings" }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["tokio", "std-future"] }
tracing-opentelemetry = "0.5"
tracing-subscriber = "0.2.0-alpha.2"

[build-dependencies]
tonic-build = "0.2"
