[package]
name = "si-model-test"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
tokio = { version = "1.2.0", features = ["full"] }
lazy_static = "1.4.0"
names = "0.11.0"
sodiumoxide = "0.2.6"
si-data = { path = "../si-data" }
si-model = { path = "../si-model" }
si-settings = { path = "../si-settings" }
jwt-simple = "0.2.8"
tempfile = "3.2.0"
serde = "1.0.123"
serde_json = { version = "1.0.64", features = ["preserve_order"] }

