[package]
name = "si-model"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
blake2 = "0.9.1"
futures = "0.3.13"
jwt-simple = "0.2.8"
names = "0.11.0"
refinery = "0.5.0"
serde = "1.0.123"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
si-data = { path = "../si-data" }
si-settings = { path = "../si-settings" }
sodiumoxide = "0.2.6"
strum = "0.20.0"
strum_macros = "0.20.1"
tempfile = "3.2.0"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = { version ="0.7.0", features = ["runtime", "with-chrono-0_4", "with-serde_json-1"] } 
tokio-stream = "0.1.3"
tokio-tungstenite = "0.14.0"
reqwest = { version = "0.11.1", features = ["json"] }
chrono = "0.4.19"
deadpool-postgres = "0.7.0"

[dev-dependencies]
anyhow = "1.0.38"
lazy_static = "1.4.0"
si-model-test = { path = "../si-model-test" }
