[package]
name = "si-model"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
blake2 = "0.9.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.13"
jwt-simple = "0.10.1"
names = { version = "0.12.0", default-features = false }
opentelemetry = "0.16.0"
opentelemetry-http = "0.5.0"
rand = "0.8.3"
refinery = "0.6.0"
reqwest = { version = "0.11.1", default-features = false, features = ["json"] }
serde = "1.0.123"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
si-data = { path = "../si-data" }
si-settings = { path = "../si-settings" }
sodiumoxide = "0.2.6"
strum = "0.21.0"
strum_macros = "0.21.1"
tempfile = "3.2.0"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
tokio-tungstenite = "0.15.0"
tracing = "0.1.26"
tracing-opentelemetry = "0.15.0"
tungstenite = "0.14.0"
uname = "0.1.1"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.38"
lazy_static = "1.4.0"
si-model-test = { path = "../si-model-test" }
