[package]
name = "si-sdf"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"
default-run = "si-sdf-server"

[[bin]]
name = "si-sdf-server"
path = "src/bin/server.rs"

[[bin]]
name = "si"
path = "src/cli/bin/si.rs"

[[bin]]
name = "si-sdf-keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
deadpool-postgres = "0.9.0"
futures = { version = "0.3", features = ["alloc"] }
jwt-simple = "0.10.1"
lazy_static = "1.4"
names = "0.11"
regex = "1.4.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8.17"
si-data = { path = "../si-data" }
si-model = { path = "../si-model" }
si-settings = { path = "../si-settings" }
sodiumoxide = "0.2"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = { version ="0.7.0", features = ["runtime", "with-chrono-0_4", "with-serde_json-1"] }
tokio-stream = "0.1.3"
tokio-tungstenite = "0.15"
toml = "0.5"
url = "2.2.0"
warp = "0.3"

[dev-dependencies]
lazy_static = "1.4"
names = "0.11"
serde_urlencoded = "0.7.0"
si-model-test = { path = "../si-model-test" }
tempfile = "3.1.0"
tokio-test = "0.4"
