[package]
name = "si-sdf"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"
publish = false
default-run = "si-sdf-server"

[[bin]]
name = "si-sdf-server"
path = "src/bin/server.rs"

[[bin]]
name = "si"
path = "src/cli/bin/si.rs"

[[bin]]
name = "si-sdf-keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
futures = { version = "0.3", features = ["alloc"] }
jwt-simple = "0.10.1"
lazy_static = "1.4"
names = { version = "0.12.0", default-features = false }
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.9.0"
opentelemetry-semantic-conventions = "0.8.0"
regex = "1.4.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8.17"
si-data = { path = "../si-data" }
si-model = { path = "../si-model" }
si-settings = { path = "../si-settings" }
sodiumoxide = "0.2"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
tokio-tungstenite = "0.15"
toml = "0.5"
tracing = "0.1.26"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.19"
url = "2.2.0"
warp = "0.3"

[dev-dependencies]
lazy_static = "1.4"
serde_urlencoded = "0.7.0"
tempfile = "3.1.0"
tokio-test = "0.4"
