[package]
name = "si-settings"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

[dependencies]
config = { version = "0.9.3", features = [ "toml" ] }
toml = "0.5"
sodiumoxide = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1.10"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4"
