[package]
name = "si-settings"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

[dependencies]
config = { version = "0.10", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
sodiumoxide = "0.2"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1.25"

[dev-dependencies]
lazy_static = "1.4"
