[package]
name = "si-transport"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", features = ["alloc"] }
paho-mqtt = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.12"
typed-builder = "0.6.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
