[package]
name = "si-veritech-2"
version = "0.1.0"
edition = "2018"
default-run = "si-veritech"

[[bin]]
name = "si-veritech"
path = "src/bin/veritech.rs"

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
si-data = { path = "../si-data" }
si-settings = { path = "../si-settings" }
si-cyclone = { path = "../si-cyclone", features = ["client"] }
toml = "0.5"
tracing = "0.1.26"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.19"
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.9.0"
opentelemetry-semantic-conventions = "0.8.0"
tokio = { version = "1.2.0", features = ["full"] }
serde = "1.0.123"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
futures = { version = "0.3.17"}
