[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system_initiative_api_client"
version = "1.0.0"
description = "Python SDK for the System Initiative Public API"
authors = [
    {name = "System Initiative", email = "technical-operations@systeminit.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/systeminit/si"
"Bug Tracker" = "https://github.com/systeminit/si/issues"
"Documentation" = "https://github.com/systeminit/si"
"Source Code" = "https://github.com/systeminit/si"

[tool.setuptools]
package-data = {"system_initiative_api_client" = ["py.typed"]}

[tool.setuptools.packages.find]
exclude = ["test", "tests"]
