[package]
name = "audit-logs-stream"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
remain = { workspace = true }
serde_json = { workspace = true }
si-data-nats = { path = "../../lib/si-data-nats" }
si-events = { path = "../../lib/si-events-rs" }
telemetry = { path = "../../lib/telemetry-rs" }
thiserror = { workspace = true }
