[package]
name = "auth-api-client"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
remain = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
si-id = { path = "../../lib/si-id" }
thiserror = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
