[package]
name = "innit-server"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
buck2-resources = { path = "../../lib/buck2-resources" }
innit-core = { path = "../../lib/innit-core" }
si-data-acmpca = { path = "../../lib/si-data-acmpca" }
si-data-ssm = { path = "../../lib/si-data-ssm" }
si-settings = { path = "../../lib/si-settings" }
si-std = { path = "../../lib/si-std" }
si-tls = { path = "../../lib/si-tls" }
si-data-nats = { path = "../../lib/si-data-nats" }
telemetry = { path = "../../lib/telemetry-rs" }

anyhow = { workspace = true }
hex = { workspace = true }
ulid = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
remain = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-tunnel = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
