[package]
name = "bedrock-server"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-nats = { workspace = true }
async-trait = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
axum = { workspace = true }
bedrock-core = { path = "../../lib/bedrock-core" }
ciborium = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
remain = { workspace = true }
rust-s3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
si-data-acmpca = { path = "../../lib/si-data-acmpca" }
si-data-nats = { path = "../../lib/si-data-nats" }
si-data-ssm = { path = "../../lib/si-data-ssm" }
si-settings = { path = "../../lib/si-settings" }
si-std = { path = "../../lib/si-std" }
si-tls = { path = "../../lib/si-tls" }
telemetry = { path = "../../lib/telemetry-rs" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-tunnel = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
